--- a/views/about.hbs
+++ b/views/about.hbs
@@ -75,22 +75,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-                                <h1><a class="navbar-brand" href="index.html">Concesionaria Latinoamericana</span></a></h1>
+                                <h1><a class="navbar-brand" href="/">Concesionaria Latinoamericana</span></a></h1>
                             </div>
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                                 <nav class="cl-effect-15" id="cl-effect-15">
                                     <ul class="nav navbar-nav">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li class="active"><a href="about.html">Acerca de </a></li>
+                                        <li><a href="/">Home</a></li>
+                                        <li class="active"><a href="/about">Conócenos </a></li>
                                         <li class="dropdown">
                                             <a href="#" class="dropdown-toggle" data-hover="Iniciar Sesión" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Iniciar Sesión <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="login.html">Login</a></li>
+                                                <li><a href="/login">Login</a></li>
 
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Contáctenos</a></li>
+                                        <li><a href="/contact">Contáctenos</a></li>
                                     </ul>
 
                                 </nav>
@@ -108,39 +108,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="main-textgrids">
         <div class="container">
             <div class="w3ls-heading">
-                <h2 class="w3l-titles">Sobre nosotros...</h2>
+                <h2 class="w3l-titles">Sobre Concesionaria Latinoamericana...</h2>
                 <p class="w3layouts_dummy_para"></p>
             </div>
             <div class="ab-agile">
                 <div class="col-md-5 ab-pic">
-                    <img src="images/g1.jpg" alt=" " />
+                    <img src="images/portada.jpg" alt=" " />
                 </div>
                 <div class="col-md-7 ab-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu erat lacus, vel congue mauris. Fusce velit justo, faucibus eu sagittis ac, gravida quis tortor. Suspendisse non urna mi, quis tincidunt eros. Nullam tellus turpis,
-                        fringilla sit amet congue ut, luctus a nulla. Donec sit amet sapien neque, id ullamcorper diam. Nulla facilisi. Pellentesque pellentesque arcu a elit congue lacinia.</p>
-                    <ul class="ab">
-                        <li><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-angle-right" aria-hidden="true"></i> Lorem ipsum dolor sit amet,consectetur adipiscing elit</a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-angle-right" aria-hidden="true"></i> Pellentesque eu erat lacus,consectetur adipiscing elit</a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-angle-right" aria-hidden="true"></i> Lorem ipsum dolor sit amet,consectetur adipiscing elit</a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-angle-right" aria-hidden="true"></i> Lorem ipsum dolor sit amet,consectetur adipiscing elit</a></li>
-                    </ul>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
-            <div class="statements">
-                <div class="col-md-7 mission">
-                    <h4>Aenean quis faucibus libero</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eu erat lacus, vel congue mauris. Fusce velit justo, faucibus eu sagittis ac, gravida quis tortor. Suspendisse non urna mi, quis tincidunt eros. Nullam tellus turpis,
-                        fringilla sit amet congue ut, luctus a nulla. Donec sit amet sapien neque, id ullamcorper diam. Nulla facilisi. Pellentesque pellentesque arcu a elit congue lacinia.</p>
-                    <ul class="ab">
-                        <li><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-angle-right" aria-hidden="true"></i> Lorem ipsum dolor sit amet,consectetur adipiscing elit</a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-angle-right" aria-hidden="true"></i> Pellentesque eu erat lacus,consectetur adipiscing elit</a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-angle-right" aria-hidden="true"></i> Lorem ipsum dolor sit amet,consectetur adipiscing elit</a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-angle-right" aria-hidden="true"></i> Lorem ipsum dolor sit amet,consectetur adipiscing elit</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-5 facts">
-                    <img src="images/g4.jpg" alt=" " />
+                    <p>CONCESIONARIA LATIONAMERICANA  </p>
+                    <p>Es una empresa orgullosamente ecuatoriana creado durante este mes por estudiantes de la Universidad Politécnica Salesiana
+                    de la carrera de Ingeniería en Ciencias de la Computación. </p>
+                    
                 </div>
                 <div class="clearfix"> </div>
             </div>
@@ -152,17 +131,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
 
             <div class="w3l-heading">
-                <h3 class="w3l-titles">Why We are Different</h3>
+                <h3 class="w3l-titles">Sobre Nosotros...</h3>
             </div>
 
             <div class="w3agile-different-info">
-                <p>Cras vehicula massa id ipsum venenatis, non convallis libero pellentesque. Sed tristique massa et mattis mattis. Nunc euismod consequat ex, eu tincidunt justo malesuada vitae. Sed auctor diam quis nulla hendrerit porta. Quisque venenatis,
-                    tortor quis tristique congue, lorem lectus elementum augue, in laoreet lorem justo lacinia velit. Phasellus tempus luctus velit, eu fermentum arcu porttitor sit amet. Suspendisse id efficitur sem. Donec laoreet ante at facilisis dictum.
-                    Donec sodales porta orci sed porta. Vivamus est enim, pharetra sit amet placerat ut, eleifend quis purus. Sed elementum tortor erat, placerat rutrum augue facilisis vel. Morbi feugiat tortor erat, nec gravida mauris egestas tincidunt.
-                    Sed vitae dignissim sapien.</p>
-                <div class="w3agile-button">
-                    <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
-                </div>
+                <p>----------------------</p>
+                
             </div>
         </div>
     </div>
