--- a/views/login.hbs
+++ b/views/login.hbs
@@ -74,23 +74,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-                                <h1><a class="navbar-brand" href="index.html">Concesionaria Latinoamericana</span></a></h1>
+                                <h1><a class="navbar-brand" href="/">Concesionaria Latinoamericana</span></a></h1>
                             </div>
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                                 <nav class="cl-effect-15" id="cl-effect-15">
                                     <ul class="nav navbar-nav">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="about.html">Acerca de</a></li>
+                                        <li><a href="/">Home</a></li>
+                                        <li><a href="/about">Conócenos</a></li>
 
                                         <li class="dropdown active">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button " aria-haspopup="true" aria-expanded="false">Iniciar Sesión <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="login.html">Login</a></li>
+                                                <li><a href="/login">Login</a></li>
 
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Contáctenos</a></li>
+                                        <li><a href="/contact">Contáctenos</a></li>
                                     </ul>
 
                                 </nav>
