--- a/views/vista_report.hbs
+++ b/views/vista_report.hbs
@@ -55,10 +55,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-6 top-middle">
                         <ul>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.facebook.com/profile.php?id=100077547752012" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/concesionaria_l" target="_blank"><i class="fa fa-twitter"></i></a></li>
                         </ul>
                     </div>
                     <div class="clearfix"></div>
@@ -76,24 +74,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-                                <h1><a class="navbar-brand" href="index.html">CONCESIONARIA</span></a></h1>
+                                <h1><a class="navbar-brand" href="/">Concesionaria Latinoamericana</span></a></h1>
                             </div>
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                                 <nav class="cl-effect-15" id="cl-effect-15">
                                     <ul class="nav navbar-nav">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="services.html">Services</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
+                                        <li><a href="/">Home</a></li>
+                                        <li><a href="/about">Conócenos</a></li>
+
                                         <li class="dropdown active">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Iniciar Sesión <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="login.html">Login</a></li>
-                                                <li><a href="typography.html">Typography</a></li>
+                                                <li><a href="/login">Login</a></li>
+
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="/contact">Contáctenos</a></li>
                                     </ul>
 
                                 </nav>
@@ -630,52 +627,51 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //type -->
 
     <!-- footer -->
-    <div class="footer">
-        <div class="container">
-            <div class="agileits_Grupo4_footer_grids">
-                <div class="col-md-4 agileits_Grupo4_footer_grid">
-                    <h3>Call Us Now</h3>
-                    <ul>
-                        <li><span>Office Phone :</span> (+123) 2302 232</li>
-                        <li><span>Fax :</span> (+123) 123 456 455</li>
-                    </ul>
+ <div class="footer">
+            <div class="container">
+                <div class="agileits_Grupo4_footer_grids">
+                    <div class="col-md-4 agileits_Grupo4_footer_grid">
+                        <h3>Llámanos Ahora</h3>
+                        <ul>
+                            <li><span>Teléfono Oficina :</span> (+593) 2302 232</li>
+                            <li><span>Fax :</span> (+593) 123 456 455</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 agileits_Grupo4_footer_grid">
+                        <h3>Dirección</h3>
+                        <p>Quito, Ecuador <i>Av. Morán Valverde y Rumichaca Ñan</i></p>
+                    </div>
+                    <div class="col-md-4 agileits_Grupo4_footer_grid">
+                        <h3>Enviar un correo</h3>
+                        <ul>
+                            <li><span>Correo electrónico:</span> <a href="mailto:concesionarialatinoamericana@gmail.com">info@concelatam.com</a></li>
+                        </ul>
+                    </div>
+                    <div class="clearfix"> </div>
                 </div>
-                <div class="col-md-4 agileits_Grupo4_footer_grid">
-                    <h3>Address</h3>
-                    <p>Quito, Ecuador <i>Av. y Av. Rumichaca Ñan, Av. Moran Valverde, Quito 170146</i></p>
-                </div>
-                <div class="col-md-4 agileits_Grupo4_footer_grid">
-                    <h3>send a message</h3>
-                    <ul>
-                        <li><span>Email :</span> <a href="mailto:info@example.com">info@example1.com</a></li>
-                        <li><span>Enquiry :</span> <a href="mailto:info@enquiry.com">info@enquiry.com</a></li>
-                    </ul>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
 
-        </div>
-    </div>
-    <div class="wthree_copy_right copyright">
-        <div class="container">
-            <div class="copyrighttop">
-                <ul>
-                    <li><a class="facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a class="facebook" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a class="facebook" href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-                    <li><a class="facebook" href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                </ul>
             </div>
-            <p>© 2018 CONCESIONARIA. All rights reserved | Design by <a href="http://Grupo4.com/">Grupo4</a></p>
         </div>
-    </div>
+        <div class="wthree_copy_right copyright">
+            <div class="container">
+                <div class="copyrighttop">
+                    <ul>
+                        <li><a class="facebook" href="https://www.facebook.com/profile.php?id=100077547752012" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a class="facebook" href="https://twitter.com/concesionaria_l" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a class="facebook" href="https://www.instagram.com/concesionarialatinoamericana/ " target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+
+                    </ul>
+                </div>
+                <p>© 2022 CONCESIONARIA. All rights reserved | Design by <a href="http://Grupo4.com/">Grupo4</a></p>
+            </div>
+        </div>
     <!-- //footer -->
     <!-- bootstrap-modal-pop-up -->
     <div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    CONCESIONARIA
+                    Concesionaria Latinoamericana
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
