--- a/views/about.hbs
+++ b/views/about.hbs
@@ -117,8 +117,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="col-md-7 ab-text">
                     <p>CONCESIONARIA LATIONAMERICANA  </p>
-                    <p>Es una empresa orgullosamente ecuatoriana creado durante este mes por estudiantes de la Universidad Politécnica Salesiana
-                    de la carrera de Ingeniería en Ciencias de la Computación. </p>
+                    <p>Esta una empresa orgullosamente ecuatoriana creada durante este mes por estudiantes de la Universidad Politécnica Salesiana</p>
                     
                 </div>
                 <div class="clearfix"> </div>
@@ -135,7 +134,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
 
             <div class="w3agile-different-info">
-                <p>----------------------</p>
+                <p>Somos estudiante de la carrera de Ingeniería en Ciencias de la Computación, 
+                    responsables del matenimiento del sitio web Concesionaria Latinoamericana
+                </p>
                 
             </div>
         </div>
@@ -187,8 +188,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                         <div class="team-social-grids">
                             <ul>
-                                <li><a href="#"><i class="fa fa-facebook"target="_blank"></i></a></li>
-                                <li><a href="#"><i class="fa fa-instagram"target="_blank"></i></a></li>
                                 <li><a href="https://github.com/punkevader" target="_blank"><i class="fa fa-github"></i></a></li>
                             </ul>
                         </div>
