--- a/views/about.hbs
+++ b/views/about.hbs
@@ -134,7 +134,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
 
             <div class="w3agile-different-info">
-                <p>Somos estudiante de la carrera de Ingeniería en Ciencias de la Computación, 
+                <p>Somos estudiantes de la carrera de Ingeniería en Ciencias de la Computación, 
                     responsables del matenimiento del sitio web Concesionaria Latinoamericana
                 </p>
                 
