--- a/views/administrador.hbs
+++ b/views/administrador.hbs
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="es">
 
 <head>
-    <title>CONCESIONARIA</title>
+    <title>Concesionaria Latinoamericana | Cliente</title>
     <!-- custom-theme -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -23,10 +23,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             window.scrollTo(0, 1);
         }
     </script>
-
-    <!-- For Testimonials slider -->
-    <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="all" />
-    <!-- //For Testimonials slider -->
     <!-- //custom-theme files-->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -45,7 +41,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
 
     <!-- banner -->
-    <div class="banner">
+    <div class="banner-1">
         <div class="banner-dott">
             <!-- Top-Bar -->
             <div class="top">
@@ -53,7 +49,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                     <div class="col-md-6 top-left">
                         <ul>
-                            <li><i class="fa fa-mobile" aria-hidden="true"></i> +593 985 78 4658 </li>
+                            <li><i class="fa fa-mobile" aria-hidden="true"></i> +593 985 78 4658</li>
                             <li><i class="fa fa-map-marker" aria-hidden="true"></i> Quito, Ecuador </li>
                         </ul>
                     </div>
@@ -61,9 +57,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <ul>
                             <li><a href="https://www.facebook.com/profile.php?id=100077547752012" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://twitter.com/concesionaria_l" target="_blank"><i class="fa fa-twitter"></i></a></li>
-
                         </ul>
                     </div>
+                    <div class="clearfix"></div>
+
                 </div>
             </div>
             <div class="top-bar">
@@ -83,11 +80,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                                 <nav class="cl-effect-15" id="cl-effect-15">
                                     <ul class="nav navbar-nav">
-                                        <li class="active"><a href="/">Home</a></li>
+                                        <li><a href="/">Home</a></li>
                                         <li><a href="/about">Conócenos</a></li>
 
-                                        <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-hover="Iniciar Sesión" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Iniciar Sesión <span class="caret"></span></a>
+                                        <li class="dropdown active">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Iniciar Sesión <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="/login">Login</a></li>
 
@@ -103,102 +100,82 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
             </div>
             <!-- //Top-Bar -->
-            <!-- w3-banner -->
-            <div class="w3-banner">
-                <div id="typer"></div>
-                <p></p>
-            </div>
-
-            <!-- //w3-banner -->
         </div>
     </div>
     <!-- //banner -->
-    <!-- about -->
-    <div class="about">
+    <!-- Reportes-->
+    <div class="typo">
         <div class="container">
-
-            <h2 class="w3l-titles">Acceso completo a Concesionaria Latinoamericana</h2>
-            <div class="w3l-about-grids">
-                <div class="col-md-6 w3ls-about-left">
-                    <div class="agileits-icon-grid">
-
-                        <div class="icon-right">
+            <h3 class="w3l-titles">MODO ADMINISTRADOR</h3>
+            <p class="w3ls-p">Usted puede Insertar, Borrar, y Actualizar los registros de la base de datos</p>
+               <div class="formulario">
+                    <div class="row g-3">
+                        <div class="col">
+                            <button type="button" class="btn btn-outline-warning">Insertar</button>
+                            <label  class="form-label">Inserte un registro</label>
+                            <input type="text" class="form-control" aria-label="First name"  name="nombre_taller" required>
                         </div>
-                        <div class="clearfix"> </div>
                     </div>
-                    <div class="agileits-icon-grid">
-                        <div class="icon-right">
+
+                    <div class="row g-3">
+                        <div class="col">
+                            <button type="button" class="btn btn-outline-warning">Actualizar</button>
+                            <label class="form-label">Actualice un registro</label>
+                            <input type="text" class="form-control" aria-label="First name" name="costo_mantenimiento" pattern="[0-9]{1,4}" required>
                         </div>
-                        <div class="clearfix"> </div>
+                        <div class="col">
+                            <button type="button" class="btn btn-outline-warning">Eliminar</button>
+                            <label class="form-label">Elimine un registro</label>
+                            <input type="text" class="form-control" aria-label="First name" name="costo_repuesto" pattern="[0-9]{1,4}" required>
+                        </div>
+                        <br>
                     </div>
-                    <div class="agileits-icon-grid">
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
-                <div class="col-md-6 w3ls-about-right">
-                </div>
-                <div class="clearfix"> </div>
-            </div>
         </div>
     </div>
+
+<!-- Reportes-->
     <!-- footer -->
-    <div class="footer">
-        <div class="container">
-            <div class="agileits_Grupo4_footer_grids">
-                <div class="col-md-4 agileits_Grupo4_footer_grid">
-                    <h3>Llámanos Ahora</h3>
+ <div class="footer">
+            <div class="container">
+                <div class="agileits_Grupo4_footer_grids">
+                    <div class="col-md-4 agileits_Grupo4_footer_grid">
+                        <h3>Llámanos Ahora</h3>
+                        <ul>
+                            <li><span>Teléfono Oficina :</span> (+593) 2302 232</li>
+                            <li><span>Fax :</span> (+593) 123 456 455</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 agileits_Grupo4_footer_grid">
+                        <h3>Dirección</h3>
+                        <p>Quito, Ecuador <i>Av. Morán Valverde y Rumichaca Ñan</i></p>
+                    </div>
+                    <div class="col-md-4 agileits_Grupo4_footer_grid">
+                        <h3>Enviar un correo</h3>
+                        <ul>
+                            <li><span>Correo electrónico:</span> <a href="mailto:concesionarialatinoamericana@gmail.com">info@concelatam.com</a></li>
+                        </ul>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="wthree_copy_right copyright">
+            <div class="container">
+                <div class="copyrighttop">
                     <ul>
-                        <li><span>Teléfono Oficina :</span> (+593) 2302 232</li>
-                        <li><span>Fax :</span> (+593) 123 456 455</li>
+                        <li><a class="facebook" href="https://www.facebook.com/profile.php?id=100077547752012" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a class="facebook" href="https://twitter.com/concesionaria_l" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a class="facebook" href="https://www.instagram.com/concesionarialatinoamericana/ " target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+
                     </ul>
                 </div>
-                <div class="col-md-4 agileits_Grupo4_footer_grid">
-                    <h3>Dirección</h3>
-                    <p>Quito, Ecuador <i>Av. Morán Valverde y Rumichaca Ñan</i></p>
-                </div>
-                <div class="col-md-4 agileits_Grupo4_footer_grid">
-                    <h3>Enviar un correo</h3>
-                    <ul>
-                        <li><span>Correo electrónico:</span> <a href="mailto:concesionarialatinoamericana@gmail.com">info@concelatam.com</a></li>
-                    </ul>
-                </div>
-                <div class="clearfix"> </div>
+                <p>© 2022 CONCESIONARIA. All rights reserved | Design by <a href="http://Grupo4.com/">Grupo4</a></p>
             </div>
-
         </div>
-    </div>
-    <div class="wthree_copy_right copyright">
-        <div class="container">
-            <div class="copyrighttop">
-                <ul>
-                    <li><a class="facebook" href="https://www.facebook.com/profile.php?id=100077547752012" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a class="facebook" href="https://twitter.com/concesionaria_l" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a class="facebook" href="https://www.instagram.com/concesionarialatinoamericana/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-
-                </ul>
-            </div>
-            <p>© 2022 CONCESIONARIA. All rights reserved | Design by <a href="http://Grupo4.com/">Grupo4</a></p>
-        </div>
-    </div>
     <!-- //footer -->
     <!-- bootstrap-modal-pop-up -->
-    <div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    Hauling
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                </div>
-                <div class="modal-body">
-                    <img src="images/1.jpg" alt=" " class="img-responsive" />
-                    <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-                        vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.
-                        <i>" Quis autem vel eum iure reprehenderit qui in ea voluptate velit 
-								esse quam nihil molestiae consequatur.</i></p>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <!-- //bootstrap-modal-pop-up -->
     <!-- js -->
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
