--- a/views/administrador.hbs
+++ b/views/administrador.hbs
@@ -108,26 +108,29 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <h3 class="w3l-titles">MODO ADMINISTRADOR</h3>
             <p class="w3ls-p">Usted puede Insertar, Borrar, y Actualizar los registros de la base de datos</p>
+            <br>
                <div class="formulario">
                     <div class="row g-3">
                         <div class="col">
                             <button type="button" class="btn btn-outline-warning">Insertar</button>
-                            <label  class="form-label">Inserte un registro</label>
-                            <input type="text" class="form-control" aria-label="First name"  name="nombre_taller" required>
+<br>
+                            <input type="text" placeholder="Inserte un registro"class="form-control" aria-label="First name"  name="nombre_taller" required>
                         </div>
                     </div>
-
+                    <br>
                     <div class="row g-3">
                         <div class="col">
-                            <button type="button" class="btn btn-outline-warning">Actualizar</button>
-                            <label class="form-label">Actualice un registro</label>
-                            <input type="text" class="form-control" aria-label="First name" name="costo_mantenimiento" pattern="[0-9]{1,4}" required>
+                            <button type="button" class="btn btn-outline-success" >Actualizar</button>
+
+                            <input type="text" placeholder="Actualice un registro"class="form-control" aria-label="First name" name="costo_mantenimiento" pattern="[0-9]{1,4}" required>
                         </div>
+                        <br>
                         <div class="col">
                             <button type="button" class="btn btn-outline-warning">Eliminar</button>
-                            <label class="form-label">Elimine un registro</label>
-                            <input type="text" class="form-control" aria-label="First name" name="costo_repuesto" pattern="[0-9]{1,4}" required>
+
+                            <input type="text" placeholder="Elimine un registro"class="form-control" aria-label="First name" name="costo_repuesto" pattern="[0-9]{1,4}" required>
                         </div>
+            
                         <br>
                     </div>
         </div>
