--- a/views/about.hbs
+++ b/views/about.hbs
@@ -117,7 +117,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="col-md-7 ab-text">
                     <p>CONCESIONARIA LATIONAMERICANA  </p>
-                    <p>Esta una empresa orgullosamente ecuatoriana creada durante este mes por estudiantes de la Universidad Politécnica Salesiana</p>
+                    <p>Esta una empresa orgullosamente ecuatoriana creada durante la pandemia por estudiantes de la Universidad Politécnica Salesiana</p>
                     
                 </div>
                 <div class="clearfix"> </div>
