--- a/views/administrador.hbs
+++ b/views/administrador.hbs
@@ -114,7 +114,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col">
                             <button type="button" class="btn btn-outline-warning">Insertar</button>
 <br>
-                            <input type="text" placeholder="Inserte un registro"class="form-control" aria-label="First name"  name="nombre_taller" required>
+                            <input type="text" placeholder="Inserte un registro"class="form-control" aria-label="First name"  name="inserte_regitro" required>
                         </div>
                     </div>
                     <br>
@@ -122,13 +122,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <div class="col">
                             <button type="button" class="btn btn-outline-success" >Actualizar</button>
 
-                            <input type="text" placeholder="Actualice un registro"class="form-control" aria-label="First name" name="costo_mantenimiento" pattern="[0-9]{1,4}" required>
+                            <input type="text" placeholder="Actualice un registro"class="form-control" aria-label="First name" name="actualice_registro"  required>
                         </div>
                         <br>
                         <div class="col">
                             <button type="button" class="btn btn-outline-warning">Eliminar</button>
 
-                            <input type="text" placeholder="Elimine un registro"class="form-control" aria-label="First name" name="costo_repuesto" pattern="[0-9]{1,4}" required>
+                            <input type="text" placeholder="Elimine un registro"class="form-control" aria-label="First name" name="elimine_registro"  required>
                         </div>
             
                         <br>
