--- a/views/vista_report.hbs
+++ b/views/vista_report.hbs
@@ -110,8 +110,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <p class="w3ls-p">REPORTES DE LA CONCESIONARIA LATINOAMERICANA: </p>
           <!--Inicio tabla-->
             <div class="container my-5 text-center">
-                
-                    <input type="submit" value="Obtenerr" class="btn btn-danger w-100" id="bSubmit">
+                <button type="button" class="btn btn-outline-warning">Obtener</button>
+                    
                     <div class="mt-5">
                         <table class="table">
                             <thead>
