--- a/views/login.hbs
+++ b/views/login.hbs
@@ -127,7 +127,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <p id="times"></p>
                         </form>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                            <a role="button" class="btn btn-outline-success btn-lg px-4" onclick="logearse()" style="border-style: solid;">Ingresar</a>
+                            <a role="button" class="btn btbtn btn-outline-warning" onclick="logearse()" >Ingresar</a>
                         </div>
                     </div>
                     <b></b>
