--- a/views/about.hbs
+++ b/views/about.hbs
@@ -116,7 +116,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <img src="images/portada.jpg" alt=" " />
                 </div>
                 <div class="col-md-7 ab-text">
-                    <p>CONCESIONARIA LATIONAMERICANA  </p>
+                    <p>CONCESIONARIA LATINOAMERICANA  </p>
                     <p>Esta una empresa orgullosamente ecuatoriana creada durante la pandemia por estudiantes de la Universidad Politécnica Salesiana</p>
                     
                 </div>
@@ -135,7 +135,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
             <div class="w3agile-different-info">
                 <p>Somos estudiantes de la carrera de Ingeniería en Ciencias de la Computación, 
-                    responsables del matenimiento del sitio web Concesionaria Latinoamericana
+                    responsables del mantenimiento del sitio web Concesionaria Latinoamericana
                 </p>
                 
             </div>
