--- a/views/administrador.hbs
+++ b/views/administrador.hbs
@@ -107,6 +107,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="typo">
         <div class="container">
             <h3 class="w3l-titles">MODO ADMINISTRADOR</h3>
+            <table class='table table-bordered'>
+            <tr>
+            <th> Id de carro  </th>
+            <th> Tipo de carro  </th>
+            <th> Modelo </th>
+            <th> Marca </th>
+            <th> Precio </th>
+            <th> Caja de cambios </th>
+            <th> Mes de matriculacion </th>
+            <th> Año de matriculacion </th>
+            </tr>
+            </div>
+            </table>
             <p class="w3ls-p">Usted puede Insertar, Borrar, y Actualizar los registros de la base de datos</p>
             <br>
                <div class="formulario">
